--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "author": "Morphosium Yazilim ve Donanim Hizmetleri Ticareti Ltd. Sti.",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
     "typescript": "^3.9.7"
