--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "module": "UMD",
+        "lib": ["ES2015"],
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
