--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
   "keywords": [
     "forms"
   ],
-  "author": "Morphosium Yazilim ve Donanim Hizmetleri Ticareti Ltd. Sti.",
+  "author": "Morphosium Yazilim ve Donanim Hizmetleri Ticaret Ltd. Sti.",
   "license": "ISC",
   "dependencies": {
-    "es6-imports-renamer": "^0.1.6",
-    "gulp-es6-imports-renamer": "^0.1.8",
+    "@lernetz/gulp-typescript-bundle": "^0.3.1",
     "ini": "^2.0.0",
     "lodash": "^4.17.20",
     "lodash.template": "^4.5.0",
@@ -22,6 +21,13 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-typescript": "^6.0.0-alpha.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "es6-imports-renamer": "^0.1.6",
+    "gulp-browserify": "^0.5.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-es6-imports-renamer": "^0.1.8",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2"
   }
 }
