--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-
+        "module": "UMD",
         "lib": ["ES2015","dom"],
         "target": "ES6",
         "noImplicitAny": true,
