--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@morphosium/reform",
   "version": "1.0.0",
   "description": "A library for build user forms and generating data",
-  "main": "index.js",
+  "main": "public/reform.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
