--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@morphosium/reform",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A library for build user forms and generating data",
   "main": "public/reform.js",
+  "types": "lib",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
