--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@morphosium/reform",
   "version": "1.0.3",
   "description": "A library for build user forms and generating data",
-  "main": "public/reform.js",
+  "main": "public/module/main.js",
   "types": "lib",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
