Some issues work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
         "sourceMap": true,
         "allowJs": true,
         "esModuleInterop": true,
+        //TODO: Convert file names to kebab-case
+        "forceConsistentCasingInFileNames": false
     }
 
 }
