--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": false,
         "baseUrl": "./src/",
-        
-    }
+    },
+    "include": ["./src/**/*.ts"]
 }
